--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,7 @@
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" type="image/x-icon" />
     <meta name="theme-color" content="#ffffff" />
     
-    <title>D3 Sunburst Cart</title>
+    <title>D3 Sunburst Chart</title>
     <meta name="Description" content="D3 Sunburst chart is a customizable sunburst chart as well as the well-known ring chart or radial treemap for showing a hierarchical dataset with percentage values in the leaf nodes.">
 
     <!-- jQuery -->
